--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>sprint_1</title>
 		
-		<script src="src/index.js" type="module"></script>
+		<script src="src/index.ts" type="module"></script>
 	</head>
 
 	<body>
