--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 	</head>
 
 	<body>
+		<nav>
+			<ul>
+				<li><a href="/auth/">Вход</a></li>
+				<li><a href="/register/">Регистрация</a></li>
+				<li><a href="/chat/">Чат</a></li>
+				<li><a href="/profile/">Профиль</a></li>
+				<li><a href="/profile/edit/">Редактирвоание профиля</a></li>
+				<li><a href="/profile/password/">Изменение пароля</a></li>
+			</ul>
+		</nav>
 		<div id="root"></div>
 	</body>
 </html>
