--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="/auth/">Вход</a></li>
-				<li><a href="/register/">Регистрация</a></li>
-				<li><a href="/chat/">Чат</a></li>
-				<li><a href="/profile/">Профиль</a></li>
-				<li><a href="/profile/edit/">Редактирвоание профиля</a></li>
-				<li><a href="/profile/password/">Изменение пароля</a></li>
+				<li><a href="/auth">Вход</a></li>
+				<li><a href="/sign-up">Регистрация</a></li>
+				<li><a href="/messenger">Чат</a></li>
+				<li><a href="/settings">Профиль</a></li>
+				<li><a href="/settings/edit">Редактирвоание профиля</a></li>
+				<li><a href="/settings/password">Изменение пароля</a></li>
 			</ul>
 		</nav>
 		<div id="root"></div>
