--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="/auth">Вход</a></li>
+				<li><a href="/">Вход</a></li>
 				<li><a href="/sign-up">Регистрация</a></li>
 				<li><a href="/messenger">Чат</a></li>
 				<li><a href="/settings">Профиль</a></li>
